# rembg_gui

./: .gitignore  CMakeLists.txt  README.rst  gui.py  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-binaries.yml
src_cpp/: CMakeLists.txt  README.md  vcpkg.json
src_cpp/packaging/: README-Windows.txt  rembg-gui.desktop
src_cpp/scripts/: ci-linux.sh
src_cpp/src/: BackgroundRemovalEngine.cpp  BackgroundRemovalEngine.h  Expected.h  ImageProcessing.cpp  ImageProcessing.h  ImageViewSync.cpp  ImageViewSync.h  MainWindow.cpp  MainWindow.h  ModelManager.cpp  ModelManager.h  PanScrollArea.cpp  PanScrollArea.h  PathUtils.h  RemovalWorker.cpp  RemovalWorker.h  WindowsLauncher.cpp  main.cpp
src_cpp/tests/: GuiSmokeTestMain.cpp  ImageProcessingTests.cpp  IntegrationTests.cpp  MainWindowSmokeTest.cpp  TestMain.cpp
